# email-news

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
config/: base.toml
docker-instances/: init_db.sh
docker-instances/migrations/: 20230501070602_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
src/tests/: health_check.rs  mod.rs  subscription.rs
