[package]
name = "email-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-news"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["macros", "full"] }
serde = { version = "1.0.160", features = ["derive"] }
config = "0.13.3"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
uuid = { version = "1.3.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
reqwest = "0.11.17"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
